# ajazz-tauri

./: .gitignore  .reverse-rev  README.md  build_offline.py  keyboards_list.txt  list_keyboards.py  main.js  package-lock.json  package.json
.github/workflows/: build-tauri.yml  build.yml
reverse-source/: README.md  copy-ui.cjs  esbuild.mjs  extract_models.py  index.core.min.js  index.core.pretty.js  package-lock.json  package.json  tsconfig.json
reverse-source/src/: main.ts
scripts/: analyze_json_requests.py  check_keyboard_chunk.py  check_lang_files.py  check_outline.py  check_requests.py  chunks_list.txt  discover_jsons.py  discover_offline_assets.py  download_assets.py  download_chunks.py  download_langs.py  download_real_langs.py  extract_980_config.py  extract_config_loading.py  extract_json_loop.py  extract_switch_langs.py  extract_wc.py  extract_xe.py  find_980_led_config.py  find_all_chunks.py  find_all_js_references.py  find_error_key.py  find_error_key_all.py  find_i18n_keys.py  find_relative_imports.py  find_sl.py  find_xl_fl_usage.py  main.js  package-lock.json  package.json  patch_hardcoded_urls.py  patch_js.py  search_assets.py  search_config_callers.py  search_config_calls.py  search_first_calls.py  search_js_patterns.py  search_new_chunks_cdns.py  search_patterns_output.txt  search_ru_chunk.py  (+3 more)
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  models.json  tauri.conf.json
src-tauri/src/: commands.rs  helper_config.rs  lib.rs  main.rs  protocol.rs
src/lib/: api.ts
tauri-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
tauri-app/src-tauri/: models.json  tauri.conf.json
(+7 files in other folders)
