[package]
name = "ajazz-tauri-driver"
version = "0.1.0"
description = "Reverse-engineered Ajazz keyboard driver (Tauri + Rust hidapi)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ajazz_tauri_driver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
