[package]
name = "ajazz-tauri-driver"
version = "0.1.0"
description = "Reverse-engineered Ajazz keyboard driver (Tauri + Rust hidapi)"
edition = "2021"
rust-version = "1.77"
# Disambiguates `cargo run` / tauri-build now that we ship the background helper as a second bin.
default-run = "ajazz-tauri-driver"

[lib]
name = "ajazz_tauri_driver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless background helper: captures the screen / plays a GIF and streams it to the keyboard
# over HID, independent of the GUI. Autostarts at logon on Windows. Reuses the lib's protocol.
[[bin]]
name = "ajazz-helperd"
path = "src/bin/helperd.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
gif = "0.13"

# Windows-only: screen capture (DXGI) and autostart registry key for the background helper.
[target.'cfg(windows)'.dependencies]
scrap = "0.5"
winreg = "0.52"
